# co2s

./: Cargo.toml  README.md  index.html  index.json  static.json  static.schema.json
edit/: edit.css  edit.js  index.html
src/: json_value.rs  main.rs
static/css/: 10ed2933ead8.css  4c9cf42867e9.css  8f1e011f6761.css
templates/: footer.html  header.html  jumbotron.html  navbar.html
