[package]
name = "co2s"
version = "0.1.0"
authors = ["Florian Merz <flomerz@gmail.com>"]

[dependencies]
glob = "*"
gtmpl_value = "0.3"
rocket = "0.3.8"
rocket_codegen = "0.3.8"
rocket_contrib = "0.3.8"
serde_json = "1.0"


[dependencies.gtmpl]
version = "0.5.1"
features = ["gtmpl_dynamic_template"]
